Create Book resource Create new book create API
