# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\BookController;
 use App\Http\Controllers\CategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -9,4 +10,8 @@ Route::controller(CategoryController::class)->prefix('/category')->group(functio
     Route::get('/list', 'list');
     Route::put('/update/{id}', 'update');
     Route::delete('/delete/{id}', 'delete');
+});
+
+Route::controller(BookController::class)->prefix('/book')->group(function(){
+    Route::post('/create','create');
 });
